--- a/src/main/resources/templates/GetData.html
+++ b/src/main/resources/templates/GetData.html
@@ -13,7 +13,7 @@ p{
 </style>
 </head>
 <body>
-<h1>Hello Geek</h1>
+<h1>Hello User!!!</h1>
 <h1 th:text="${user.id}"> Replaceable text </h1 >
 <h1 th:text="${user.userName}"> Replaceable text </h1 >
 <h1 th:text="${user.data}"> Replaceable text </h1 >
